tests/errors/init_state/error_span/structured_use_after_move_at_call_span.sim

            struct M: Move + Drop { a: i64 }
            extern fn take(m: M);
            fn f(x: M) {
              entry:
                call take(move x);
                call take(move x);
                return
            }